优化404和修复配置

--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 🙊"
-header-img: "img/404-bg.jpg"
+description: ""
+header-img: ""
 permalink: /404.html
 ---
 
 
-<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="http://bbs.veltgop.xyz" homePageName="回到Veltgop论坛">
+<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="http://veltgop.github.io" homePageName="回到Veltgop论坛">
 </script>
 
 <script>
