--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 ---
 
 
-<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="http://veltgop.github.io" homePageName="回到Veltgop论坛">
+<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="https://bbs.veltgop.xyz" homePageName="回到Veltgop论坛">
 </script>
 
 <script>
